--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
             <p class="greeting">Hello, <span class="user-name-display">User</span>!</p>
             <h1>How are you feeling today?</h1>
             <p class="date-display" id="currentDateDisplay">Wednesday, April 16th</p>
-            <button class="primary-btn" onclick="openLogModal()">Log today's mood</button>
+            <button id="logMoodBtn" class="primary-btn" onclick="openLogModal()">Log today's mood</button>
         </header>
 
         <header id="hero-logged" class="hero-logged-grid" style="display: none;">
