--- a/public/auth/signup.html
+++ b/public/auth/signup.html
@@ -4,64 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mood Tracker | Sign Up</title>
-  <!-- Stiluri (Tailwind CSS) -->
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
 
   <div class="bg-white p-8 rounded-lg shadow-lg max-w-sm w-full">
     
-    <!-- Header: Titlu și Subtitlu -->
     <h1 class="text-2xl font-bold text-indigo-600 text-center mb-2">Create an account</h1>
     <p class="text-gray-500 text-sm text-center mb-6">Join to track your daily mood and sleep with ease.</p>
 
-    <!-- Formularul de Înregistrare -->
     <form id="signupForm">
       
-      <!-- Căsuța de Email -->
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Email</label>
         <input type="email" id="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-indigo-500" placeholder="newuser@example.com" required>
       </div>
 
-      <!-- Căsuța de Parolă -->
       <div class="mb-6">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Password</label>
         <input type="password" id="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-indigo-500" placeholder="Choose a strong password" required>
         <p class="text-xs text-gray-400 mt-1">Must be at least 6 characters.</p>
       </div>
 
-      <!-- Butonul de Sign Up -->
       <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg transition duration-300 shadow-md">
         Sign Up
       </button>
 
     </form>
 
-    <!-- Link către Login -->
     <div class="mt-6 text-center text-sm">
       <p class="text-gray-600">Already got an account?</p>
       <a href="login.html" class="text-indigo-600 font-bold hover:text-indigo-800 hover:underline">Log in</a>
     </div>
   </div>
 
-  <!-- Logica: Trimite datele la server sau simulează înregistrarea -->
   <script>
     document.getElementById('signupForm').addEventListener('submit', async (e) => {
-        e.preventDefault(); // Oprește reîncărcarea paginii
+        e.preventDefault(); 
 
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
 
-        // Validare simplă
         if (password.length < 6) {
             alert("Parola trebuie să aibă minim 6 caractere!");
             return;
         }
 
-        // Încercăm să trimitem la server (Dacă serverul Node.js e pornit și are ruta făcută)
         try {
-            // Nota: Schimbă URL-ul dacă serverul tău e pe alt port
             const response = await fetch('http://localhost:5000/api/auth/signup', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -70,16 +60,14 @@
 
             if (response.ok) {
                 alert("Cont creat cu succes! Acum te poți loga.");
-                window.location.href = "login.html"; // Te trimite la login
+                window.location.href = "login.html"; 
             } else {
-                // Dacă serverul nu e gata, simulăm succesul ca să poți testa interfața
                 console.warn("Serverul nu a răspuns corect, dar simulăm succesul pentru demo.");
                 alert("(Demo) Cont creat! Mergi la login.");
                 window.location.href = "login.html";
             }
         } catch (error) {
             console.error(error);
-            // Fallback pentru demo dacă nu merge serverul
             alert("(Offline Mode) Cont creat local! Mergi la login.");
             window.location.href = "login.html";
         }
